# MKwMG

./: .gitignore  .gitmodules  CMakeLists.txt  config.cfg  config.json  imgui.ini  readme.txt  save.json  update_cmake_list.sh
lib/: CMakeLists.txt  CMakeOptions.cmake
shaders/: bezierShader.frag  bezierShader.tese  bezierShader.vert  commonTess.frag  cursorShader.vert  gregoryShader.tesc  gregoryShader.tese  linkShader.vert  pointShader.vert  shader.vert  surfaceShader.tesc  surfaceShader.tese  surfaceShader.vert  surfaceShader0.tese  surfaceShader2.tese  torusShader.tesc  torusShader.tese
src/: Camera.cpp  Camera.h  ConfigState.cpp  ConfigState.h  Event.cpp  Event.h  FileLoading.cpp  FileLoading.h  GlfwUtil.cpp  GlfwUtil.h  ImGuiUtil.cpp  ImGuiUtil.h  JsonUtil.cpp  JsonUtil.h  OpenGLUtil.cpp  OpenGLUtil.h  Scene.cpp  Scene.h  Settings.h  Shader.cpp  Shader.h  ShaderArray.cpp  ShaderArray.h  Util.cpp  Util.h  Window.cpp  Window.h  camera.cpp  camera.h  library_include.h  main.cpp
src/Curves/: BasicBezier.cpp  BasicBezier.h  BezierCommon.cpp  BezierCommon.h  BezierCurve.cpp  BezierCurve.h  BezierCurve0.cpp  BezierCurve0.h  BezierCurve2.cpp  BezierCurve2.h  BezierCurveInter.cpp  BezierCurveInter.h
src/Gizmos/: Cursor.cpp  Cursor.h  MultiCursor.cpp  MultiCursor.h
src/ImGui/: ImGuiPanel.cpp  ImGuiPanel.h  ImGuiUtil.cpp  ImGuiUtil.h  imgui_include.h
src/Json/: FileLoading.cpp  JsonUtil.h
src/Object/: Cursor.cpp  Cursor.h  EquidistanceSurface.cpp  EquidistanceSurface.h  IntersectionObject.cpp  IntersectionObject.h  MullingPathCreator.cpp  MullingPathCreator.h  MultiCursor.cpp  MultiCursor.h  Object.cpp  Object.h  ObjectArray.cpp  ObjectArray.h  ObjectArrayListener.h  Point.cpp  Point.h  Transform.cpp  Transform.h
src/Shader/: Shader.cpp  Shader.h  ShaderArray.cpp  ShaderArray.h
src/Solids/: BezierCurve.cpp  BezierCurve.h  Cursor.cpp  Cursor.h  MultiCursor.cpp  MultiCursor.h  Object.cpp  Object.h  ObjectArray.cpp  ObjectArray.h  Point.cpp  Point.h  Solid.cpp  Solid.h  Torus.cpp  Torus.h  Transform.cpp  Transform.h
src/Surfaces/: BezierSurface0.cpp  BezierSurface0.h  BezierSurface2.cpp  BezierSurface2.h  BezierSurfaceCommon.cpp  BezierSurfaceCommon.h  BezierSurfaceSegment.cpp  BezierSurfaceSegment.h  BezierSurfaceSegment0.cpp  BezierSurfaceSegment0.h  GregoryPatch.cpp  GregoryPatch.h
